--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,14 +7,14 @@
 	},
 	"builds": [
 		{
-			"src": "dist/main.js",
+			"src": "src/main.ts",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "dist/main.js",
+			"dest": "src/main.ts",
 			"methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
 		}
 	]
